# Career_pal

./: .gitignore  README.md  requirements.txt
backend/: main.py  pyproject.toml
backend/agents/: chat.py  clarification.py  email.py  graph.py  job_hunt.py  orchestrator.py  planner.py  resume.py  state.py
backend/api/routes/: auth.py  chat.py  format.py  sessions.py
backend/llm/: client.py
backend/llm/prompts/: email_prompt.txt  job_hunt_prompt.txt  orchestator_prompt.txt  planner_prompt.txt  resume_prompt.txt
backend/mcp-server/: .gitignore
backend/mcp-server/linkedin-mcp-server/linkedin_mcp_server/: __main__.py
backend/mcp-server/linkedin-mcp-server/linkedin_mcp_server/tools/: job.py
backend/mcp-server/resume-mcp-server/: resume_server.py
backend/mcp_client/: __init__.py  client.py  config.py
backend/memory/: __init__.py  checkpointer.py  session.py
backend/schemas/: data_model.py
backend/tools/: resume_tool.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/pages/: Auth.module.css  Chat.js  Chat.module.css  Login.js  Signup.js
frontend/src/variables/context/: AuthContext.js
frontend/src/variables/services/: api.js
